fix #3 - fix the bower package name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "advancedtable",
+  "name": "tinymce-plugin-advancedtable",
   "version": "0.1.0",
   "authors": [
     "Rémi Becheras <rbecheras@sirap.fr>"
